Fix styles version mobile blog and menu, changes text SEO

--- a/src/components/Hamburger/Hamburger.module.css
+++ b/src/components/Hamburger/Hamburger.module.css
@@ -26,7 +26,7 @@
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
-    background-color: #ffffff;
+    background-color: #ffffffb3;
   }
 
   .hamburger-box {
@@ -47,7 +47,7 @@
   .hamburger-inner::after {
     width: 40px;
     height: 4px;
-    background-color: #ffffff;
+    background-color: #ffffffb3;
     border-radius: 4px;
     position: absolute;
     transition-property: transform;
